# shipstation_api_wrapper

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst
shipstation_api_wrapper/: api.py  filter.py
shipstation_api_wrapper/models/: order.py  product.py
