[tool.poetry]
name = "shipstation_api_wrapper"
version = "0.1.1"
description = "Non official Shipstation API wrapper"
authors = ["Vick Mu <arbi3400@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = {extras = ["email"], version = "^2.6.3"}
email-validator = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
